# davidbingmann.de

./: .dockerignore  .gitignore  .sesskey  Caddyfile  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: docker-build.yml  docker-image.yml
app/: Caddyfile  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/assets/: about_me.md  footer.js  styles.css  timeline.css
assets/: styles.css  timeline.css  toggleMenu.js
docs/superpowers/specs/: 2026-06-12-terminal-hero-design.md
scripts/: daily_visitors.py
src/: App.jsx  main.jsx  styles.css
src/components/: Layout.jsx
src/data/: projects.js  timeline.js
src/davidbingmann_de/: main.py
src/davidbingmann_de/assets/: about_me.md  styles.css  timeline.css
src/hooks/: useTheme.js
src/pages/: Home.jsx  Impressum.jsx  Project.jsx  Projects.jsx  Resume.jsx
