[project]
name = "davidbingmann.de"
version = "1.0.0"
description = "my personal website"
requires-python = ">=3.13"
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = [
    "fh-bootstrap>=0.0.3",
    "frontmatter>=3.0.8",
    "markdown-it-py[plugins]>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "python-fasthtml>=0.12.0",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
ignore = [
    "F403",
    "F405"
]
fixable = ["ALL"]
